--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -6,9 +6,9 @@ The third major iteration of this website, updated with a new technology stack t
 
 _Stack_: React, Next.js, Theme UI, MDX, React Three Fiber, Three.js, TypeScript, Vercel
 
-## Untitled Discord bot (2022)
+## [Redacted] Discord bot (2022)
 
-I created a Discord bot for the server I hang out in with most of my close friends. It's highly specific to how we interact in the server and has references to inside jokes.
+I created a custom Discord bot for the private server I hang out in with some of my close friends. It's highly specific to how we interact in the server and has references to inside jokes.
 
 So far, it has a Message Command that helps people format text and a Slash Command that makes sharing gifs more convenient.
 
@@ -18,7 +18,7 @@ _Stack_: Node, discord.js, Airtable, Fly.io
 
 Digestif shows me the most-liked Tweets from people I follow. It makes it easy to discover new Tweets or see what's going on at a glance.
 It started as a web app hosted from my Raspberry Pi, accessible only on my home network.
-Later, I built an integration that posts the best Tweets in Discord once a day.
+Later, I built an integration that posts the best Tweets to Discord once a day.
 
 _Stack_: Django, Celery, React, Next.js, Raspberry Pi
 
