--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -70,7 +70,7 @@ _Stack_: React, Styled Components, TypeScript, Node, Express, Raspberry Pi
 
 ## Aurora (2017)
 
-[Website](aurora-synth.now.sh) | [GitHub](https://github.com/andrewh0/kiosk)
+[Website](aurora-synth.vercel.app) | [GitHub](https://github.com/andrewh0/kiosk)
 
 Aurora is web-based synth that can be played with a computer keyboard and MIDI keyboard (Chrome only).
 It was inspired by professional software synths like Sylenth1, Massive, and Serum.
