--- a/src/markdown/about.mdx
+++ b/src/markdown/about.mdx
@@ -1,3 +1,5 @@
+# About
+
 Hi, I’m Andrew. I’m a software engineer based in the San Francisco Bay Area, and I enjoy bringing ideas to life by writing code.
 
 Right now, I'm at [Landed](https://landed.com) helping essential professionals build financial security in the communities they serve.
