--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -1,7 +1,7 @@
 # Projects
 
-I learn by doing, and my side projects let me explore technologies outside of work. Projects listed here are typically over-engineered, messy, and incomplete.
-They're always fun to work on though, and each one has taught me something new.
+I learn by doing, and my side projects let me explore technologies outside of work. Most of the projects below are over-engineered, messy, or incomplete.
+They're always fun to work on though, and each one has taught me something different.
 
 ## Personal Website _v3_ (2022)
 
@@ -25,7 +25,7 @@ Later, I built an integration that posts the best Tweets to Discord once a day.
 
 **Stack** — Django, Celery, React, Next.js, Raspberry Pi
 
-_External APIs_: Twitter, Discord
+**External APIs** — Twitter, Discord
 
 ## OK.css (2020)
 
