--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -29,7 +29,7 @@ Later, I built an integration that posts the best Tweets to Discord once a day.
 
 ## OK.css (2020)
 
-[Website](https://okcss.netlify.app/) | [GitHub](https://github.com/andrewh0/okcss)
+[Website](https://okcss.netlify.app/) &middot; [GitHub](https://github.com/andrewh0/okcss)
 
 OK.css is a classless CSS framework that adds sensible styling defaults to your web page. It's featured in [this collection](https://github.com/dohliam/dropin-minimal-css) of minimal stylesheets.
 
@@ -52,7 +52,7 @@ It works by sampling the loudness of the video and increasing the playback rate 
 
 ## Tech Talks (2019)
 
-[Website](https://watchtechtalks.com) | [GitHub](https://github.com/andrewh0/tech-talks)
+[Website](https://watchtechtalks.com) &middot; [GitHub](https://github.com/andrewh0/tech-talks)
 
 Tech Talks was a place to discover and watch conference talks about web development.
 I had collected thousands of talks from a number of JavaScript conferences from 2017 through 2019 by looking up their associated conference playlists on YouTube.
@@ -71,7 +71,7 @@ stocks, and weather. [I posted about it on Twitter.](https://twitter.com/andrewl
 
 ## Aurora (2017)
 
-[Website](aurora-synth.vercel.app) | [GitHub](https://github.com/andrewh0/kiosk)
+[Website](aurora-synth.vercel.app) &middot; [GitHub](https://github.com/andrewh0/kiosk)
 
 Aurora is web-based synth that can be played with a computer keyboard and MIDI keyboard (Chrome only).
 It was inspired by professional software synths like Sylenth1, Massive, and Serum.
