Fix label, link

--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -71,7 +71,7 @@ stocks, and weather. [I posted about it on Twitter.](https://twitter.com/andrewl
 
 ## Aurora (2017)
 
-[Website](aurora-synth.vercel.app) &middot; [GitHub](https://github.com/andrewh0/kiosk)
+[Website](https://aurora-synth.vercel.app) &middot; [GitHub](https://github.com/andrewh0/kiosk)
 
 Aurora is web-based synth that can be played with a computer keyboard and MIDI keyboard (Chrome only).
 It was inspired by professional software synths like Sylenth1, Massive, and Serum.
