--- a/src/markdown/about.mdx
+++ b/src/markdown/about.mdx
@@ -1,5 +1,25 @@
 # About
 
-Hi, I’m Andrew. I’m a software engineer based in the San Francisco Bay Area, and I enjoy bringing ideas to life by writing code.
+Hi, I’m Andrew. I’m a software engineer based in the San Francisco Bay Area.
 
 Right now, I'm at [Landed](https://landed.com) helping essential professionals build financial security in the communities they serve.
+
+---
+
+I've always been fascinated by computers, technology, and the Internet. But it wasn't until I made my first website in my sixth grade web design class that I discovered how fun it was to create digital products for other people.
+
+I was hooked.
+
+In the months following that web design class, I printed out a lengthy online tutorial about JavaScript and learned how to make web pages interactive; I hacked together mods of my favorite Flash games and figured out how to create my own; and I clicked "View Source" on every web page I came across and explored how it was built.
+
+I knew I wanted to work in tech, years later, even after college. I was lucky enough to land my first job at eBay, where I managed the company's data center infrastructure. I soon discovered that working in Operations wasn’t for me and was determined to find something where I could be more creative.
+
+So, I became a software engineer through a coding bootcamp and accepted a role at a small startup. There, I rediscovered how much I like building impactful digital products and bringing ideas to life through code. I had finally found my way back to that magical feeling I first experienced in that web design class.
+
+---
+
+The tools have changed quite a bit since I first learned about the Internet, but I still love the idea that code can empower anyone to create delightful products or interactive content for the world.
+
+I could not have arrived at where I am today without the support of other engineers, teachers, mentors, and the programming community, so my personal website is dedicated to sharing what I've learned so far — my knowledge, mistakes, and experiences — to help other people build something they're proud of.
+
+This website is [open-source](https://github.com/andrewh0) and so are many of my [projects](/projects). Feel free to email me with any questions or reach out elsewhere on the web.
