--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -54,7 +54,7 @@ Later, I built an integration that posts the best Tweets to Discord once a day.
 
 OK.css is a classless CSS framework that adds sensible styling defaults to your web page. It's featured in [this collection](https://github.com/dohliam/dropin-minimal-css) of minimal stylesheets.
 
-<Stack technologies={["CSS", "Gulp"]} />
+<Stack technologies={["CSS", "Gulp", "Netlify"]} />
 
 ## Untitled Chinese Flashcard App (2020)
 
@@ -128,6 +128,7 @@ I wanted to make exploring audio synthesis accessible and fun!
     "Flow",
     "Styled Components",
     "Web MIDI API",
+    "Vercel",
     "Tone.js",
   ]}
 />
