Fix nav, update project title

--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -1,11 +1,12 @@
 import Stack from "components/stack";
+import ProjectTitle from "components/projectTitle";
 
 # Projects
 
 I learn by doing, and my side projects let me explore technologies outside of work. Most of the projects below are over-engineered, messy, or incomplete.
 They're always fun to work on though, and each one has taught me something different.
 
-## Personal Website _v3_ (2022)
+<ProjectTitle name="Personal Website v3" year={2022} />
 
 The third major iteration of this website, updated with a new technology stack to support a personal blog.
 
@@ -22,7 +23,7 @@ The third major iteration of this website, updated with a new technology stack t
   ]}
 />
 
-## [Redacted] Discord bot (2022)
+<ProjectTitle name="Custom Discord bot" year={2022} />
 
 I created a custom Discord bot for the private server I hang out in with some of my close friends. It's highly specific to how we interact in the server and has references to inside jokes.
 
@@ -30,7 +31,7 @@ So far, it has a Message Command that helps people format text and a Slash Comma
 
 <Stack technologies={["Node", "Express", "Fly.io", "discord.js", "Airtable"]} />
 
-## Digestif (2020)
+<ProjectTitle name="Digestif" year={2020} />
 
 Digestif shows me the most-liked Tweets from people I follow. It makes it easy to discover new Tweets or see what's going on at a glance.
 It started as a web app hosted from my Raspberry Pi, accessible only on my home network.
@@ -48,7 +49,7 @@ Later, I built an integration that posts the best Tweets to Discord once a day.
   ]}
 />
 
-## OK.css (2020)
+<ProjectTitle name="OK.css" year={2020} />
 
 [Website](https://okcss.netlify.app/) &middot; [GitHub](https://github.com/andrewh0/okcss)
 
@@ -56,7 +57,7 @@ OK.css is a classless CSS framework that adds sensible styling defaults to your 
 
 <Stack technologies={["CSS", "Gulp", "Netlify"]} />
 
-## Untitled Chinese Flashcard App (2020)
+<ProjectTitle name="Chinese Flashcard App" year={2020} />
 
 I've been learning Chinese, but wanted a more efficient way to review new vocabulary words.
 I [shared a small prototype](https://twitter.com/andrewlho_codes/status/1279829618598412288) of what the frontend could look like in SwiftUI, and made some progress building a cross-platform client with React Native.
@@ -64,7 +65,7 @@ As part of this project, I also researched spaced-repetition algorithms and loca
 
 <Stack technologies={["React Native", "Expo", "SwiftUI", "sqlite"]} />
 
-## YouTube Silence Skipper (2019)
+<ProjectTitle name="YouTube Silence Skipper" year={2019} />
 
 [GitHub](https://github.com/andrewh0/youtube-skip-silence)
 
@@ -73,7 +74,7 @@ It works by sampling the loudness of the video and increasing the playback rate 
 
 <Stack technologies={["JavaScript", "Chrome Extension"]} />
 
-## Tech Talks (2019)
+<ProjectTitle name="Tech Talks" year={2019} />
 
 [Website](https://watchtechtalks.com) &middot; [GitHub](https://github.com/andrewh0/tech-talks)
 
@@ -93,7 +94,7 @@ This project is no longer being actively developed.
   ]}
 />
 
-## Raspberry Pi Kiosk (2017)
+<ProjectTitle name="Raspberry Pi Kiosk" year={2017} />
 
 [GitHub](https://github.com/andrewh0/kiosk)
 
@@ -111,7 +112,7 @@ stocks, and weather. [I posted about it on Twitter.](https://twitter.com/andrewl
   ]}
 />
 
-## Aurora (2017)
+<ProjectTitle name="Aurora" year={2017} />
 
 [Website](https://aurora-synth.vercel.app) &middot; [GitHub](https://github.com/andrewh0/kiosk)
 
@@ -131,7 +132,7 @@ I wanted to make exploring audio synthesis accessible and fun!
   ]}
 />
 
-## LED Lamp (2015)
+<ProjectTitle name="LED Lamp" year={2015} />
 
 [Video](https://vimeo.com/113175895)
 
@@ -143,7 +144,7 @@ It's made from a [Spark Core](https://docs.particle.io/datasheets/discontinued/c
   technologies={["HTML", "CSS", "jQuery", "Python", "Flask", "Heroku", "C++"]}
 />
 
-## Algorithmic Music Generator (2012)
+<ProjectTitle name="Algorithmic Music Generator" year={2012} />
 
 My first attempt at implementing a program that generates music was during my Computers and Music class I took in 2012.
 I had been interested in algorithmic music composition for a while and I wanted the program to create something structured and pleasing to the ear.
