Update copy, footer, about image

--- a/src/markdown/about.mdx
+++ b/src/markdown/about.mdx
@@ -1,4 +1,4 @@
-# About
+![Me and my dog](/andrew-dog.jpg)
 
 Hi, I’m Andrew. I’m a software engineer based in the San Francisco Bay Area.
 
@@ -12,7 +12,7 @@ I was hooked.
 
 In the months following that web design class, I printed out a lengthy online tutorial about JavaScript and learned how to make web pages interactive; I hacked together mods of my favorite Flash games and figured out how to create my own; and I clicked "View Source" on every web page I came across and explored how it was built.
 
-I knew I wanted to work in tech, years later, even after college. I was lucky enough to land my first job at eBay, where I managed the company's data center infrastructure. I soon discovered that working in Operations wasn’t for me and was determined to find something where I could be more creative.
+I knew I wanted to work in tech, years later, even after college. I was lucky enough to land my first job at eBay, where I managed the company's data center infrastructure. Soon, I discovered that working in Operations wasn’t for me and was determined to find something where I could be more creative.
 
 So, I became a software engineer through a coding bootcamp and accepted a role at a small startup. There, I rediscovered how much I like building impactful digital products and bringing ideas to life through code. I had finally found my way back to that magical feeling I first experienced in that web design class.
 
