--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -1,10 +1,8 @@
 import Stack from "components/stack";
 import ProjectTitle from "components/projectTitle";
 
-# Projects
-
-I learn by doing, and my side projects let me explore technologies outside of work. Most of the projects below are over-engineered, messy, or incomplete.
-They're always fun to work on though, and each one has taught me something different.
+My side projects tend to be over-engineered, messy, and incomplete.
+Most of them are meant for just me though, and with each one, I always learn something new.
 
 <ProjectTitle name="Personal Website v3" year={2022} />
 
@@ -25,9 +23,9 @@ The third major iteration of this website, updated with a new technology stack t
 
 <ProjectTitle name="Custom Discord bot" year={2022} />
 
-I created a custom Discord bot for the private server I hang out in with some of my close friends. It's highly specific to how we interact in the server and has references to inside jokes.
+I created a custom Discord bot for the private server I hang out in with some of my close friends. It's highly specific to how we interact in the server — mostly inside jokes and silly memes.
 
-So far, it has a Message Command that helps people format text and a Slash Command that makes sharing gifs more convenient.
+It's built with Discord's [Message Command](https://discord.com/developers/docs/interactions/application-commands#message-commands) and [Slash Command](https://discord.com/developers/docs/interactions/application-commands#slash-commands) APIs.
 
 <Stack technologies={["Node", "Express", "Fly.io", "discord.js", "Airtable"]} />
 
@@ -35,7 +33,7 @@ So far, it has a Message Command that helps people format text and a Slash Comma
 
 Digestif shows me the most-liked Tweets from people I follow. It makes it easy to discover new Tweets or see what's going on at a glance.
 It started as a web app hosted from my Raspberry Pi, accessible only on my home network.
-Later, I built an integration that posts the best Tweets to Discord once a day.
+Later, I built an integration that posts the best Tweets to my Discord server once a day.
 
 <Stack
   technologies={[
@@ -98,8 +96,8 @@ This project is no longer being actively developed.
 
 [GitHub](https://github.com/andrewh0/kiosk)
 
-The Raspberry Pi powers a display that shows the current time, news,
-stocks, and weather. [I posted about it on Twitter.](https://twitter.com/andrewlho_codes/status/1068685640118689792)
+I connected my Raspberry Pi to a display that shows the current time, news, stocks, and weather.
+Then, [I posted about it on Twitter.](https://twitter.com/andrewlho_codes/status/1068685640118689792)
 
 <Stack
   technologies={[
@@ -132,7 +130,7 @@ I wanted to make exploring audio synthesis accessible and fun!
   ]}
 />
 
-<ProjectTitle name="LED Lamp" year={2015} />
+<ProjectTitle name="Wi-Fi LED Lamp" year={2015} />
 
 [Video](https://vimeo.com/113175895)
 
@@ -146,7 +144,7 @@ It's made from a [Spark Core](https://docs.particle.io/datasheets/discontinued/c
 
 <ProjectTitle name="Algorithmic Music Generator" year={2012} />
 
-My first attempt at implementing a program that generates music was during my Computers and Music class I took in 2012.
-I had been interested in algorithmic music composition for a while and I wanted the program to create something structured and pleasing to the ear.
+For my final project in my Computers and Music class, I wrote a program that generates music based on user input (key, tempo, etc.) and rules from classical music theory.
+I tried to make the output as structured and enjoyable as I could.
 
 <Stack technologies={["JavaScript", "Max MSP"]} />
