--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -1,8 +1,7 @@
 import Stack from "components/stack";
 import ProjectTitle from "components/projectTitle";
 
-My side projects tend to be over-engineered, messy, and incomplete.
-Most of them are meant for just me though, and with each one, I always learn something new.
+Sometimes I build things in my free time.
 
 <ProjectTitle name="Personal Website v3" year={2022} />
 
@@ -33,7 +32,7 @@ It's built with Discord's [Message Command](https://discord.com/developers/docs/
 
 Digestif shows me the most-liked Tweets from people I follow. It makes it easy to discover new Tweets or see what's going on at a glance.
 It started as a web app hosted from my Raspberry Pi, accessible only on my home network.
-Later, I built an integration that posts the best Tweets to my Discord server once a day.
+Later, I made it post the best Tweets to my Discord server once a day.
 
 <Stack
   technologies={[
@@ -97,7 +96,7 @@ This project is no longer being actively developed.
 [GitHub](https://github.com/andrewh0/kiosk)
 
 I connected my Raspberry Pi to a display that shows the current time, news, stocks, and weather.
-Then, [I posted about it on Twitter.](https://twitter.com/andrewlho_codes/status/1068685640118689792)
+Then I posted about it on [Twitter](https://twitter.com/andrewlho_codes/status/1068685640118689792).
 
 <Stack
   technologies={[
@@ -136,7 +135,7 @@ I wanted to make exploring audio synthesis accessible and fun!
 
 Inspired by the Philips Hue and the LIFX bulbs, I created a lighting solution that can be controlled by a web browser and can be customized with software.
 
-It's made from a [Spark Core](https://docs.particle.io/datasheets/discontinued/core-datasheet/), [IKEA Vidja lamp](https://www.ikea.com/us/en/p/vidja-floor-lamp-with-led-bulb-white-30416149/), and [Neopixel light strip](https://learn.adafruit.com/adafruit-neopixel-uberguide/).
+Made with [Spark Core](https://docs.particle.io/datasheets/discontinued/core-datasheet/), [IKEA Vidja lamp](https://www.ikea.com/us/en/p/vidja-floor-lamp-with-led-bulb-white-30416149/), and [Neopixel light strip](https://learn.adafruit.com/adafruit-neopixel-uberguide/).
 
 <Stack
   technologies={["HTML", "CSS", "jQuery", "Python", "Flask", "Heroku", "C++"]}
@@ -145,6 +144,5 @@ It's made from a [Spark Core](https://docs.particle.io/datasheets/discontinued/c
 <ProjectTitle name="Algorithmic Music Generator" year={2012} />
 
 For my final project in my Computers and Music class, I wrote a program that generates music based on user input (key, tempo, etc.) and rules from classical music theory.
-I tried to make the output as structured and enjoyable as I could.
 
 <Stack technologies={["JavaScript", "Max MSP"]} />
