Add link to previous version

--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -5,7 +5,7 @@ Sometimes I build things in my free time.
 
 <ProjectTitle name="Personal Website v3" year={2022} />
 
-The third major iteration of this website, updated with a new technology stack to support a personal blog.
+The third major iteration of this website, updated with a new technology stack to support a personal blog. If you want, you can still view the [previous version](https://andrewh0-v2.vercel.app/).
 
 <Stack
   technologies={[
