--- a/src/markdown/about.mdx
+++ b/src/markdown/about.mdx
@@ -8,4 +8,4 @@ Right now, I'm at [Landed](https://landed.com) helping essential professionals b
 
 I could not have arrived at where I am today without the support of other engineers, teachers, mentors, and the programming community, so my personal website is dedicated to sharing what I've learned so far — my knowledge, mistakes, and experiences — to help other people build something they're proud of.
 
-This website is [open-source](https://github.com/andrewh0) and so are many of my [projects](/projects). Feel free to email me with any questions or reach out elsewhere on the web.
+This website is [open-source](https://github.com/andrewh0/andrewh0-blog) and so are many of my [projects](/projects). Feel free to email me with any questions or reach out elsewhere on the web.
