--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -1,11 +1,33 @@
 import Stack from "components/stack";
 import ProjectTitle from "components/projectTitle";
+import { Themed, Box, useThemeUI } from "theme-ui";
 
-Sometimes I build things in my free time.
+<ProjectTitle name="Chinese Flashcard App: Web" year={2022} isActive />
 
-<ProjectTitle name="Personal Website v3" year={2022} />
+[Website](https://chinese-app.vercel.app/)
+
+A web version of my mobile flashcard experiments, built with modern web technologies.
+
+<Stack
+  technologies={[
+    "React",
+    "Stitches",
+    "Radix UI",
+    "TypeScript",
+    "Prisma",
+    "Supabase",
+    "Next.js",
+    "Vercel",
+  ]}
+/>
+
+<ProjectTitle name="Personal Website v3" year={2022} isActive />
+
+[Website](/)
 
 The third major iteration of this website, updated with a new technology stack to support a personal blog. If you want, you can still view the [previous version](https://andrewh0-v2.vercel.app/).
+
+This is my playground to experiment with new technologies and build smaller apps. Check out this [stopwatch](/stopwatch) and this [map of restaurants in San Francisco](/sf).
 
 <Stack
   technologies={[
