--- a/src/markdown/about.mdx
+++ b/src/markdown/about.mdx
@@ -2,7 +2,7 @@
 
 Hi, I’m Andrew. I’m a software engineer based in the San Francisco Bay Area.
 
-Right now, I'm at [NexHealth](https://www.nexhealth.com), building software to connect patients, doctors, and developers.
+Right now, I'm at [NexHealth](https://www.nexhealth.com) building software to connect patients, doctors, and developers.
 Before, I was at [Landed](https://landed.com), [Fig](https://fig.co), and [eBay](https://ebay.com).
 
 ---
