Fix project page

--- a/src/markdown/projects.mdx
+++ b/src/markdown/projects.mdx
@@ -2,7 +2,7 @@ import Stack from "components/stack";
 import ProjectTitle from "components/projectTitle";
 import { Themed, Box, useThemeUI } from "theme-ui";
 
-<ProjectTitle name="Chinese Flashcard App: Web" year={2022} isActive />
+<ProjectTitle name="Chinese Flashcard App: Web" year={2022} />
 
 [Website](https://chinese-app.vercel.app/)
 
@@ -21,7 +21,7 @@ A web version of my mobile flashcard experiments, built with modern web technolo
   ]}
 />
 
-<ProjectTitle name="Personal Website v3" year={2022} isActive />
+<ProjectTitle name="Personal Website v3" year={2022} />
 
 [Website](/)
 
